<resources>
    <string name="app_name">TabunganKu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Laporan</string>
    <string name="menu_slideshow">Informasi</string>
    <string name="menu_tools">Pengaturan</string>
    <string name="menu_person">Profil</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="dashboard">Dashboard</string>
    <string name="laporan">Laporan</string>
    <string name="Info">Informasi</string>
    <string name="keluar">Keluar</string>
    <string name="Apps">TabunganKu</string>
    <string name="welcome">Selamat Datang di TabunganKu</string>
    <string name="pilihTabungan">Silahkan Pilih Tabungan Kamu</string>
    <string name="login">MASUK</string>
    <string name="title_activity_gallery">GalleryActivity</string>

    <string name="Sekolahku">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="tabunganku">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tabungan">Info TabunganKu</string>

    <string name="profile">Data Pribadi</string>
    <string name="nama1">Nama Lengkap</string>
    <string name="nama2">Vania Paramita Andika</string>
    <string name="nis">NIS</string>
    <string name="nis2">17/415534/SV/13399</string>
    <string name="kelas1">Kelas</string>
    <string name="kelas2">Komsi A</string>
    <string name="tahun1">Tahun Angkatan</string>
    <string name="tahun2">2017/2018</string>
    <string name="email1">E-mail</string>
    <string name="email2">vania.paramita@mail.ugm.ac.id</string>
    <string name="status1">Status Siswa</string>

    <string name="setting">Pengaturan</string>
    <string name="desc_setting">No Telepon ini akan digunakan untuk mengirimkan kegiatan transaksi
        atau pun pengumuman kegiatan dalam tabungan siswa.</string>
    <string name="telp_setting">No Telepon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc_tabungan">No Telepon ini akan digunakan untuk mengirimkan kegiatan transaksi
        atau pun pengumuman kegiatan dalam tabungan siswa. No Telepon ini akan digunakan untuk mengirimkan kegiatan transaksi
        atau pun pengumuman kegiatan dalam tabungan siswa. No Telepon ini akan digunakan untuk mengirimkan kegiatan transaksi
        atau pun pengumuman kegiatan dalam tabungan siswa. </string>
    <string name="laporan_tabunganku">Laporan Transaksi</string>
    <string name="transaksi">Transaksi</string>
    <string name="tgl_transaksi">Tanggal</string>
    <string name="jumlah_transaksi">Jumlah</string>
    <string name="title_activity_tabungan_b">TabunganB</string>
    <string name="title_activity_main__tabungan_c">MainActivity_TabunganC</string>

    //Nama Tabungan
    <string name="button_1">Tabungan Wajib</string>
    <string name="button_2">Tabungan Prestasi</string>
    <string name="button_3">Tabungan Wisata</string>
    <string name="tarik">Tarik</string>
    <string name="todo">TODO</string>
    <string name="download">Download</string>
</resources>
