<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard_1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/laporan"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/informasi"
            android:title="@string/menu_slideshow" />

    </group>

    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_person"
                android:icon="@drawable/user_nav"
                android:title="@string/menu_person" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/settings_nav"
                android:title="@string/menu_tools" />
        </menu>
    </item>

</menu>
