<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar
        android:id="@+id/bar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="100dp"
        android:layout_height="100dp">
    </ProgressBar>
    <ScrollView
        android:id="@+id/profile_hide"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:elevation="15dp"
                app:cardCornerRadius="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profil_pic"
                        android:layout_width="match_parent"
                        app:civ_border_color="@color/colorTabel"
                        app:civ_border_width="1dp"
                        android:layout_height="180dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/profile_pic"/>
                    <TextView
                        android:id="@+id/nama_profil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profil_pic"
                        android:layout_margin="20sp"
                        android:textStyle="bold"
                        android:text="@string/nama2"
                        android:textAlignment="center"
                        android:textSize="20dp"/>
                    <TextView
                        android:id="@+id/nis_profil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_below="@+id/nama_profil"
                        android:text="@string/nis"
                        android:textSize="16dp"/>
                    <TextView
                        android:id="@+id/nis_profi2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginRight="25sp"
                        android:layout_below="@id/nama_profil"
                        android:gravity="right"
                        android:text="@string/nis2"
                        android:textSize="16dp"/>
                    <View
                        android:id="@+id/line_profil3"
                        android:layout_below="@id/nis_profil"
                        android:layout_width="match_parent"
                        android:layout_height="0.75sp"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:background="@color/colorTabel"/>

                    <TextView
                        android:id="@+id/kelas_profil1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_below="@+id/line_profil3"
                        android:text="@string/kelas1"
                        android:textSize="16dp"/>
                    <TextView
                        android:id="@+id/kelas_profi2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginRight="25sp"
                        android:layout_below="@id/line_profil3"
                        android:gravity="right"
                        android:text="@string/kelas2"
                        android:textSize="16dp"/>
                    <View
                        android:id="@+id/line_profil4"
                        android:layout_below="@id/kelas_profil1"
                        android:layout_width="match_parent"
                        android:layout_height="0.75sp"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:background="@color/colorTabel"/>

                    <TextView
                        android:id="@+id/tahun_profil1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_below="@+id/line_profil4"
                        android:text="@string/tahun1"
                        android:textSize="16dp"/>
                    <TextView
                        android:id="@+id/tahun_profi2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginRight="25sp"
                        android:layout_below="@id/line_profil4"
                        android:gravity="right"
                        android:text="@string/tahun2"
                        android:textSize="16dp"/>
                    <View
                        android:id="@+id/line_profil5"
                        android:layout_below="@id/tahun_profil1"
                        android:layout_width="match_parent"
                        android:layout_height="0.75sp"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:background="@color/colorTabel"/>

                    <TextView
                        android:id="@+id/email_profil1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_below="@+id/line_profil5"
                        android:text="@string/email1"
                        android:textSize="16dp"/>
                    <TextView
                        android:id="@+id/email_profi2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginRight="25sp"
                        android:layout_below="@id/line_profil5"
                        android:gravity="right"
                        android:text="@string/email2"
                        android:textSize="16dp"/>
                    <View
                        android:id="@+id/line_profil6"
                        android:layout_below="@id/email_profil1"
                        android:layout_width="match_parent"
                        android:layout_height="0.75sp"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_marginRight="25sp"
                        android:background="@color/colorTabel"/>

                    <TextView
                        android:id="@+id/status_profil1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:layout_marginLeft="25sp"
                        android:layout_below="@+id/line_profil6"
                        android:text="@string/status1"
                        android:textSize="16dp"/>

                    <Button
                        android:id="@+id/aktif"
                        android:layout_width="wrap_content"
                        android:layout_height="30sp"
                        android:layout_below="@id/line_profil6"
                        android:background="@drawable/status_aktif"
                        android:layout_alignRight="@id/status_profil1"
                        android:layout_marginTop="15sp"
                        android:layout_marginRight="25sp"
                        android:text="Aktif"
                        android:textStyle="bold"
                        android:textColor="@color/colorWord"
                        style="@style/Widget.AppCompat.Button.Borderless"/>
                    <View
                        android:id="@+id/line_profil7"
                        android:layout_below="@id/status_profil1"
                        android:layout_width="match_parent"
                        android:layout_height="0.75sp"
                        android:layout_margin="25sp"
                        android:background="@color/colorTabel"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>



        </RelativeLayout>
    </ScrollView>
</RelativeLayout>