<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWord"
    tools:context=".activity.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nameAplikasi_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Apps"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/pembukaan_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameAplikasi_login"
                android:text="@string/welcome"
                android:gravity="center"
                android:layout_marginTop="25sp"
                android:textSize="18sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pembukaan_login"
                android:layout_marginTop="25sp"
                android:text="Masuk"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:textSize="24dp"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="40dp"
                    android:hint="Email"
                    android:elevation="2dp"
                    android:inputType="textWebEmailAddress"
                    android:background="@drawable/input"
                    android:fontFamily="sans-serif"/>
                <!--<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/etEmail"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="35dp"
                    android:elevation="2dp"
                    android:src="@drawable/email"/>-->

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/etEmail"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:hint="Password"
                    android:elevation="2dp"
                    android:inputType="textPassword"
                    android:background="@drawable/input"
                    android:fontFamily="sans-serif"/>
                <!--<ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/etPassword"
                    android:layout_below="@id/etEmail"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="35dp"
                    android:elevation="2dp"
                    android:src="@drawable/password"/>-->
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chechbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lihat Password"
                    android:layout_below="@id/etPassword"
                    android:layout_marginLeft="50dp"
                    />
            </RelativeLayout>


            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/tombol3"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textColor="@color/colorWord"
                android:textStyle="bold"
                android:textSize="20sp"
                android:elevation="1dp"
                android:layout_below="@+id/etPassword"/>

            <Button
                android:id="@+id/tombol_lupa_sandi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWord"
                android:text="LUPA KATA SANDI?"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="14dp"
                style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>